--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <!-- Navbar -->
   <nav id="navbar">
     <div class="navbar__logo">
-      <img src="imgs/logo.png" width="20px">
+      <img src="imgs/logo.png" class="navbar__logo__icon">
       <a href="#">Jiye</a>
     </div>
     <ul class="navbar__menu">
@@ -30,13 +30,18 @@
       <li class="navbar__menu__item">Contact</li>
     </ul>
   </nav>
-  <div>
-    <img src="imgs/me.png">
-    <h1>Hello, <br>
+
+  <!-- Home -->
+  <section id="home">
+    <img src="imgs/me.png" alt="Jiye's profile photo" class="home__avatar">
+    <h1 class="home__title">
+      Hello, <br>
       I' frontend developer :)
-      <p>I am a web frontend developer using JavaScript as the main language.</p>
     </h1>
-  </div>
+    <h2 class="home__descrition">I am a web frontend developer using JavaScript as the main language.</h2>
+    <button class="home__contact">Contack Me</button>
+  </section>
+
   <!-- About -->
   <section id="about"></section>
   <!-- Skills -->
