--- a/index.html
+++ b/index.html
@@ -89,7 +89,92 @@
   </section>
 
   <!-- Skills -->
-  <section id="skills"></section>
+  <section id="skills">
+    <h1>Skills</h1>
+    <h2>Skills & Attributes</h2>
+    <p>
+      Passion for learning new technologies. Capable of working within a team environment and independently.
+      Ability to plan and time schedule, work under strict time pressure and adapt quickly when needed.
+    </p>
+    <div class="skillset">
+      <div class="skillset__left">
+        <h3 class="skillset__title">Skills</h3>
+        <div class="skill">
+          <div class="skill_description">
+            <span>HTML</span>
+            <span>99%</span>
+          </div>
+          <div class="skill__bar">
+            <div class="skill__value"></div>
+          </div>
+        </div>
+        <div class="skill">
+          <div class="skill_description">
+            <span>CSS</span>
+            <span>99%</span>
+          </div>
+          <div class="skill__bar">
+            <div class="skill__value"></div>
+          </div>
+        </div>
+        <div class="skill">
+          <div class="skill_description">
+            <span>JavaScript</span>
+            <span>99%</span>
+          </div>
+          <div class="skill__bar">
+            <div class="skill__value"></div>
+          </div>
+        </div>
+        <div class="skill">
+          <div class="skill_description">
+            <span>React</span>
+            <span>99%</span>
+          </div>
+          <div class="skill__bar">
+            <div class="skill__value"></div>
+          </div>
+        </div>
+        <div class="skill">
+          <div class="skill_description">
+            <span>TypeScript</span>
+            <span>99%</span>
+          </div>
+          <div class="skill__bar">
+            <div class="skill__value"></div>
+          </div>
+        </div>
+        <div class="skill">
+          <div class="skill_description">
+            <span>NodeJS</span>
+            <span>99%</span>
+          </div>
+          <div class="skill__bar">
+            <div class="skill__value"></div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="skillset__right">
+      <div class="tools">
+        <h3 class="skillset__title">Tools</h3>
+        <ul class="tools__list">
+          <li><span>Visual Studio Code</span></li>
+          <li><span>IntelliJ</span></li>
+          <li><span>Photoshop</span></li>
+          <li><span>Adobe Illustration</span></li>
+        </ul>
+      </div>
+      <div class="etc">
+        <h3 class="skillset__title">Etc</h3>
+        <ul class="etc__list">
+          <li><span>communication</span></li>
+          <li><span>git</span></li>
+        </ul>
+      </div>
+    </div>
+
+  </section>
 
   <!-- Work -->
   <section id="work"></section>
