--- a/index.html
+++ b/index.html
@@ -177,7 +177,73 @@
   </section>
 
   <!-- Work -->
-  <section id="work"></section>
+  <section id="work">
+    <h1>My work</h1>
+    <h3>projects</h3>
+    <div class="work__categories">
+      <button class="categories__btn">All<span class="category__count">5</span></button>
+      <button class="categories__btn">Front-end<span class="category__count">3</span></button>
+      <button class="categories__btn">Back-end<span class="category__count">2</span></button>
+    </div>
+    <div class="work__projects">
+      <a href="" class="project" target="_blank">
+        <img src="imgs/projects/validation project.png" alt="validation" class="project__img">
+        <div class="project__description">
+          <h3>Validation Project</h3>
+          <span>JavaScript로 DOM 조작을 통해 유효성 검사를 진행</span>
+        </div>
+      </a>
+      <a href="" class="project" target="_blank">
+        <img src="imgs/projects/validation project.png" alt="validation" class="project__img">
+        <div class="project__description">
+          <h3>Validation Project</h3>
+          <span>JavaScript로 DOM 조작을 통해 유효성 검사를 진행</span>
+        </div>
+      </a>
+      <a href="" class="project" target="_blank">
+        <img src="imgs/projects/validation project.png" alt="validation" class="project__img">
+        <div class="project__description">
+          <h3>Validation Project</h3>
+          <span>JavaScript로 DOM 조작을 통해 유효성 검사를 진행</span>
+        </div>
+      </a>
+      <a href="" class="project" target="_blank">
+        <img src="imgs/projects/validation project.png" alt="validation" class="project__img">
+        <div class="project__description">
+          <h3>Validation Project</h3>
+          <span>JavaScript로 DOM 조작을 통해 유효성 검사를 진행</span>
+        </div>
+      </a>
+      <a href="" class="project" target="_blank">
+        <img src="imgs/projects/validation project.png" alt="validation" class="project__img">
+        <div class="project__description">
+          <h3>Validation Project</h3>
+          <span>JavaScript로 DOM 조작을 통해 유효성 검사를 진행</span>
+        </div>
+      </a>
+      <a href="" class="project" target="_blank">
+        <img src="imgs/projects/validation project.png" alt="validation" class="project__img">
+        <div class="project__description">
+          <h3>Validation Project</h3>
+          <span>JavaScript로 DOM 조작을 통해 유효성 검사를 진행</span>
+        </div>
+      </a>
+      <a href="" class="project" target="_blank">
+        <img src="imgs/projects/validation project.png" alt="validation" class="project__img">
+        <div class="project__description">
+          <h3>Validation Project</h3>
+          <span>JavaScript로 DOM 조작을 통해 유효성 검사를 진행</span>
+        </div>
+      </a>
+      <a href="" class="project" target="_blank">
+        <img src="imgs/projects/validation project.png" alt="validation" class="project__img">
+        <div class="project__description">
+          <h3>Validation Project</h3>
+          <span>JavaScript로 DOM 조작을 통해 유효성 검사를 진행</span>
+        </div>
+      </a>
+    </div>
+  </section>
 
   <!-- Testimonials -->
   <section id="testimonials"></section>
