--- a/index.html
+++ b/index.html
@@ -246,7 +246,34 @@
   </section>
 
   <!-- Testimonials -->
-  <section id="testimonials"></section>
+  <section id="testimonials">
+    <h1>Testimonials</h1>
+    <h3>See what they say about me</h3>
+    <div class="testimonials">
+      <div class="testimonial">
+        <img src="imgs/testimonial/people1.jpg" alt="" class="testimonial__avatar">
+        <div class="testimonial__speech-bubble">
+          <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Maxime iste eius quasi harum.
+            Voluptatum quas ea unde suscipit ratione doloremque aliquam voluptates culpa enim nobis?
+            Assumenda necessitatibus impedit animi itaque!
+          </p>
+          <p class="name"><a href="">Jiye</a>/ company name</p>
+        </div>
+      </div>
+      <div class="testimonial">
+        <img src="imgs/testimonial/people1.jpg" alt="" class="testimonial__avatar">
+        <div class="testimonial__speech-bubble">
+          <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Maxime iste eius quasi harum.
+            Voluptatum quas ea unde suscipit ratione doloremque aliquam voluptates culpa enim nobis?
+            Assumenda necessitatibus impedit animi itaque!
+          </p>
+          <p class="name"><a href="">Jiye</a>/ company name</p>
+        </div>
+      </div>
+    </div>
+  </section>
 
   <!-- Contact -->
   <section id="contact"></section>
