--- a/index.html
+++ b/index.html
@@ -276,7 +276,19 @@
   </section>
 
   <!-- Contact -->
-  <section id="contact"></section>
+  <section id="contact">
+    <h1 class="contact__title">Let's talk</h1>
+    <h2 class="contact__email">jy522hi@gmail.com</h2>
+    <div class="contact__links">
+      <a href="https://github.com/jiye-7" target="_blank">
+        <i class="fab fa-github"></i>
+      </a>
+      <a href="https://velog.io/@jy777hi" target="_blank">
+        <i class="fas fa-blog"></i>
+      </a>
+    </div>
+    <p class="contact__rights">2021 JY - All rights reserved</p>
+  </section>
 </body>
 
 </html>
