CSS: Global setup

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <img src="imgs/me.png" alt="Jiye's profile photo" class="home__avatar">
     <h1 class="home__title">
       Hello, <br>
-      I' frontend developer :)
+      I'm frontend developer :)
     </h1>
     <h2 class="home__descrition">I am a web frontend developer using JavaScript as the main language.</h2>
     <button class="home__contact">Contack Me</button>
