--- a/index.html
+++ b/index.html
@@ -15,10 +15,6 @@
 </head>
 
 <body>
-  <h1>Heading</h1>
-  <h2>Heading</h2>
-  <h3>Heading</h3>
-  <p>Paragraph</p>
   <!-- Navbar -->
   <nav id="navbar">
     <div class="navbar__logo">
@@ -26,7 +22,7 @@
       <a href="#">Jiye</a>
     </div>
     <ul class="navbar__menu">
-      <li class="navbar__menu__item">Home</li>
+      <li class="navbar__menu__item active">Home</li>
       <li class="navbar__menu__item">About</li>
       <li class="navbar__menu__item">Skills</li>
       <li class="navbar__menu__item">My word</li>
