--- a/index.html
+++ b/index.html
@@ -280,10 +280,10 @@
     <h1 class="contact__title">Let's talk</h1>
     <h2 class="contact__email">jy522hi@gmail.com</h2>
     <div class="contact__links">
-      <a href="https://github.com/jiye-7" target="_blank">
+      <a href="https://github.com/jiye-7" target="_blank" class="contact__link">
         <i class="fab fa-github"></i>
       </a>
-      <a href="https://velog.io/@jy777hi" target="_blank">
+      <a href="https://velog.io/@jy777hi" target="_blank" class="contact__link">
         <i class="fas fa-blog"></i>
       </a>
     </div>
