--- a/index.html
+++ b/index.html
@@ -43,53 +43,66 @@
   </section>
 
   <!-- About -->
-  <section id="about">
+  <section id="about" class="section">
     <h1>About me</h1>
     <p>
-      안녕하세요. 저는 Web Frontend 예비 개발자 유지예 입니다.
-      주 언어는 JavaScript, React, TypeScript이며 재미있게 개발을 하며 지내고 싶습니다.
-      저는 강아지를 좋아하고, 사진 찍는 것과 여행다니는 것을 좋아합니다. :)
-      새로운 언어와 기술을 배우고 적용하는 것을 좋아하며, 현재 자바스크립트, React, NodeJs, TypeScript를 공부중에 있습니다.
+      안녕하세요. Web Frontend 개발자 유지예 입니다.
+      <br>주 언어는 JavaScript, React, TypeScript이며 재미있게 개발을 하며 지내고 싶습니다.
+      <br>강아지를 좋아하고, 사진 찍는 것과 여행다니는 것을 좋아합니다. :)<br>
+      새로운 언어와 기술을 배우고 적용하는 것을 좋아하며, 현재 자바스크립트, React, NodeJs, TypeScript 등 공부중에 있습니다.
     </p>
     <div class="about__majors">
       <div class="major">
         <div class="major__icon">
           <i class="fab fa-js"></i>
         </div>
-        <div class="major__title">Single Page Application</div>
-        <div class="major__description">HTML, CSS, <br>JavaScript, DOM</div>
+        <h2 class="major__title">Single Page Application</h2>
+        <div class="major__description">
+          HTML, CSS,
+          <br>JavaScript, DOM
+        </div>
       </div>
       <div class="major">
         <div class="major__icon">
           <i class="fab fa-react"></i>
         </div>
-        <div class="major__title">Frontend & Web Architecture</div>
-        <div class="major__description">Node.js, Ajax, REST API, <br>React, Redux</div>
+        <h2 class="major__title">Frontend & Web Architecture</h2>
+        <div class="major__description">
+          Node.js, Ajax, REST API,
+          <br>React, Redux
+        </div>
       </div>
       <div class="major">
         <div class="major__icon">
           <i class="fas fa-laptop-code"></i>
         </div>
-        <div class="major__title">Backend & Computer Science</div>
-        <div class="major__description">Data Structure, MySQL, NoSQL, <br>HTTPS, Network, AWS</div>
+        <h2 class="major__title">Backend & Computer Science</h2>
+        <div class="major__description">
+          Data Structure, MySQL, NoSQL,
+          <br>HTTPS, Network, AWS
+        </div>
       </div>
     </div>
     <div class="about__jobs">
       <div class="jobs">
         <img src="imgs/jobs/codestates-ci.png" class="jobs__logo">
-        <p class="jobs__name">Code States Software Engineering Education</p>
-        <p class="jobs__period">2021. 03. 02 ~ 2021. 07. 23</p>
+        <div class="job__description">
+          <p class="jobs__name">Code States Software Engineering Education</p>
+          <p class="jobs__period">2021. 03. 02 ~ 2021. 07. 23</p>
+        </div>
       </div>
       <div class="jobs">
         <img src="imgs/jobs/kosaf-logo.gif" class="jobs__logo">
-        <p class="jobs__name">Worked as a web designer at KOSFA</p>
-        <p class="jobs__period">2018. 03. 02 ~ 2019. 03. 31</p>
+        <div class="job__description">
+          <p class="jobs__name">Worked as a web designer at KOSFA</p>
+          <p class="jobs__period">2018. 03. 02 ~ 2019. 03. 31</p>
+        </div>
       </div>
     </div>
   </section>
 
   <!-- Skills -->
-  <section id="skills">
+  <section id="skills" class="section">
     <h1>Skills</h1>
     <h2>Skills & Attributes</h2>
     <p>
@@ -177,7 +190,7 @@
   </section>
 
   <!-- Work -->
-  <section id="work">
+  <section id="work" class="section">
     <h1>My work</h1>
     <h3>projects</h3>
     <div class="work__categories">
@@ -246,7 +259,7 @@
   </section>
 
   <!-- Testimonials -->
-  <section id="testimonials">
+  <section id="testimonials" class="section">
     <h1>Testimonials</h1>
     <h3>See what they say about me</h3>
     <div class="testimonials">
@@ -276,7 +289,7 @@
   </section>
 
   <!-- Contact -->
-  <section id="contact">
+  <section id="contact" class="section">
     <h1 class="contact__title">Let's talk</h1>
     <h2 class="contact__email">jy522hi@gmail.com</h2>
     <div class="contact__links">
