--- a/index.html
+++ b/index.html
@@ -43,13 +43,13 @@
   </section>
 
   <!-- About -->
-  <section id="about" class="section">
+  <section id="about" class="section section__container">
     <h1>About me</h1>
     <p>
       안녕하세요. Web Frontend 개발자 유지예 입니다.
       <br>주 언어는 JavaScript, React, TypeScript이며 재미있게 개발을 하며 지내고 싶습니다.
       <br>강아지를 좋아하고, 사진 찍는 것과 여행다니는 것을 좋아합니다. :)<br>
-      새로운 언어와 기술을 배우고 적용하는 것을 좋아하며, 현재 자바스크립트, React, NodeJs, TypeScript 등 공부중에 있습니다.
+      <br>새로운 언어와 기술을 배우고 적용하는 것을 좋아하며, 현재 자바스크립트, React, NodeJs, TypeScript 등 공부중에 있습니다.
     </p>
     <div class="about__majors">
       <div class="major">
@@ -94,7 +94,7 @@
       <div class="jobs">
         <img src="imgs/jobs/kosaf-logo.gif" class="jobs__logo">
         <div class="job__description">
-          <p class="jobs__name">Worked as a web designer at KOSFA</p>
+          <p class="jobs__name">Worked as a web designer at KOSAF</p>
           <p class="jobs__period">2018. 03. 02 ~ 2019. 03. 31</p>
         </div>
       </div>
@@ -103,90 +103,91 @@
 
   <!-- Skills -->
   <section id="skills" class="section">
-    <h1>Skills</h1>
-    <h2>Skills & Attributes</h2>
-    <p>
-      Passion for learning new technologies. Capable of working within a team environment and independently.
-      Ability to plan and time schedule, work under strict time pressure and adapt quickly when needed.
-    </p>
-    <div class="skillset">
-      <div class="skillset__left">
-        <h3 class="skillset__title">Skills</h3>
-        <div class="skill">
-          <div class="skill_description">
-            <span>HTML</span>
-            <span>99%</span>
+    <div class="section__container">
+      <h1>Skills</h1>
+      <h2>Skills & Attributes</h2>
+      <p>
+        Passion for learning new technologies. Capable of working within a team environment and independently.
+        <br>Ability to plan and time schedule, work under strict time pressure and adapt quickly when needed.
+      </p>
+      <div class="skillset">
+        <div class="skillset__left">
+          <h3 class="skillset__title">Skills</h3>
+          <div class="skill">
+            <div class="skill_description">
+              <span>HTML</span>
+              <span>99%</span>
+            </div>
+            <div class="skill__bar">
+              <div class="skill__value" style="width: 99%;"></div>
+            </div>
           </div>
-          <div class="skill__bar">
-            <div class="skill__value"></div>
+          <div class="skill">
+            <div class="skill_description">
+              <span>CSS</span>
+              <span>92%</span>
+            </div>
+            <div class="skill__bar">
+              <div class="skill__value" style="width: 92%;"></div>
+            </div>
+          </div>
+          <div class="skill">
+            <div class="skill_description">
+              <span>JavaScript</span>
+              <span>90%</span>
+            </div>
+            <div class="skill__bar">
+              <div class="skill__value" style="width: 90%;"></div>
+            </div>
+          </div>
+          <div class="skill">
+            <div class="skill_description">
+              <span>React</span>
+              <span>90%</span>
+            </div>
+            <div class="skill__bar">
+              <div class="skill__value" style="width: 90%;"></div>
+            </div>
+          </div>
+          <div class="skill">
+            <div class="skill_description">
+              <span>TypeScript</span>
+              <span>70%</span>
+            </div>
+            <div class="skill__bar">
+              <div class="skill__value" style="width: 70%;"></div>
+            </div>
+          </div>
+          <div class="skill">
+            <div class="skill_description">
+              <span>NodeJS</span>
+              <span>87%</span>
+            </div>
+            <div class="skill__bar">
+              <div class="skill__value" style="width: 87%;"></div>
+            </div>
           </div>
         </div>
-        <div class="skill">
-          <div class="skill_description">
-            <span>CSS</span>
-            <span>99%</span>
+        <div class="skillset__right">
+          <div class="tools">
+            <h3 class="skillset__title">Tools</h3>
+            <ul class="tools__list">
+              <li><span>Visual Studio Code</span></li>
+              <li><span>IntelliJ</span></li>
+              <li><span>Photoshop</span></li>
+              <li><span>Adobe Illustration</span></li>
+            </ul>
           </div>
-          <div class="skill__bar">
-            <div class="skill__value"></div>
-          </div>
-        </div>
-        <div class="skill">
-          <div class="skill_description">
-            <span>JavaScript</span>
-            <span>99%</span>
-          </div>
-          <div class="skill__bar">
-            <div class="skill__value"></div>
-          </div>
-        </div>
-        <div class="skill">
-          <div class="skill_description">
-            <span>React</span>
-            <span>99%</span>
-          </div>
-          <div class="skill__bar">
-            <div class="skill__value"></div>
-          </div>
-        </div>
-        <div class="skill">
-          <div class="skill_description">
-            <span>TypeScript</span>
-            <span>99%</span>
-          </div>
-          <div class="skill__bar">
-            <div class="skill__value"></div>
-          </div>
-        </div>
-        <div class="skill">
-          <div class="skill_description">
-            <span>NodeJS</span>
-            <span>99%</span>
-          </div>
-          <div class="skill__bar">
-            <div class="skill__value"></div>
+          <div class="etc">
+            <h3 class="skillset__title">Etc</h3>
+            <ul class="etc__list">
+              <li><span>communication</span></li>
+              <li><span>git</span></li>
+            </ul>
           </div>
         </div>
       </div>
     </div>
-    <div class="skillset__right">
-      <div class="tools">
-        <h3 class="skillset__title">Tools</h3>
-        <ul class="tools__list">
-          <li><span>Visual Studio Code</span></li>
-          <li><span>IntelliJ</span></li>
-          <li><span>Photoshop</span></li>
-          <li><span>Adobe Illustration</span></li>
-        </ul>
-      </div>
-      <div class="etc">
-        <h3 class="skillset__title">Etc</h3>
-        <ul class="etc__list">
-          <li><span>communication</span></li>
-          <li><span>git</span></li>
-        </ul>
-      </div>
-    </div>
-
   </section>
 
   <!-- Work -->
