--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
     <h1>My work</h1>
     <h3>projects</h3>
     <div class="work__categories">
-      <button class="categories__btn">All<span class="category__count">5</span></button>
+      <button class="categories__btn active">All<span class="category__count">5</span></button>
       <button class="categories__btn">Front-end<span class="category__count">3</span></button>
       <button class="categories__btn">Back-end<span class="category__count">2</span></button>
     </div>
