--- a/index.html
+++ b/index.html
@@ -192,101 +192,104 @@
 
   <!-- Work -->
   <section id="work" class="section">
-    <h1>My work</h1>
-    <h3>projects</h3>
-    <div class="work__categories">
-      <button class="categories__btn active">All<span class="category__count">5</span></button>
-      <button class="categories__btn">Front-end<span class="category__count">3</span></button>
-      <button class="categories__btn">Back-end<span class="category__count">2</span></button>
-    </div>
-    <div class="work__projects">
-      <a href="" class="project" target="_blank">
-        <img src="imgs/projects/validation project.png" alt="validation" class="project__img">
-        <div class="project__description">
-          <h3>Validation Project</h3>
-          <span>JavaScript로 DOM 조작을 통해 유효성 검사를 진행</span>
-        </div>
-      </a>
-      <a href="" class="project" target="_blank">
-        <img src="imgs/projects/validation project.png" alt="validation" class="project__img">
-        <div class="project__description">
-          <h3>Validation Project</h3>
-          <span>JavaScript로 DOM 조작을 통해 유효성 검사를 진행</span>
-        </div>
-      </a>
-      <a href="" class="project" target="_blank">
-        <img src="imgs/projects/validation project.png" alt="validation" class="project__img">
-        <div class="project__description">
-          <h3>Validation Project</h3>
-          <span>JavaScript로 DOM 조작을 통해 유효성 검사를 진행</span>
-        </div>
-      </a>
-      <a href="" class="project" target="_blank">
-        <img src="imgs/projects/validation project.png" alt="validation" class="project__img">
-        <div class="project__description">
-          <h3>Validation Project</h3>
-          <span>JavaScript로 DOM 조작을 통해 유효성 검사를 진행</span>
-        </div>
-      </a>
-      <a href="" class="project" target="_blank">
-        <img src="imgs/projects/validation project.png" alt="validation" class="project__img">
-        <div class="project__description">
-          <h3>Validation Project</h3>
-          <span>JavaScript로 DOM 조작을 통해 유효성 검사를 진행</span>
-        </div>
-      </a>
-      <a href="" class="project" target="_blank">
-        <img src="imgs/projects/validation project.png" alt="validation" class="project__img">
-        <div class="project__description">
-          <h3>Validation Project</h3>
-          <span>JavaScript로 DOM 조작을 통해 유효성 검사를 진행</span>
-        </div>
-      </a>
-      <a href="" class="project" target="_blank">
-        <img src="imgs/projects/validation project.png" alt="validation" class="project__img">
-        <div class="project__description">
-          <h3>Validation Project</h3>
-          <span>JavaScript로 DOM 조작을 통해 유효성 검사를 진행</span>
-        </div>
-      </a>
-      <a href="" class="project" target="_blank">
-        <img src="imgs/projects/validation project.png" alt="validation" class="project__img">
-        <div class="project__description">
-          <h3>Validation Project</h3>
-          <span>JavaScript로 DOM 조작을 통해 유효성 검사를 진행</span>
-        </div>
-      </a>
+    <div class="section__container">
+      <h1>My work</h1>
+      <h3>projects</h3>
+      <div class="work__categories">
+        <button class="categories__btn active">All<span class="category__count">5</span></button>
+        <button class="categories__btn">Front-end<span class="category__count">3</span></button>
+        <button class="categories__btn">Back-end<span class="category__count">2</span></button>
+      </div>
+      <div class="work__projects">
+        <a href="" class="project" target="_blank">
+          <img src="imgs/projects/validation project.png" alt="validation" class="project__img">
+          <div class="project__description">
+            <h3>Validation Project</h3>
+            <span>JavaScript로 DOM 조작을 통해 유효성 검사를 진행</span>
+          </div>
+        </a>
+        <a href="" class="project" target="_blank">
+          <img src="imgs/projects/validation project.png" alt="validation" class="project__img">
+          <div class="project__description">
+            <h3>Validation Project</h3>
+            <span>JavaScript로 DOM 조작을 통해 유효성 검사를 진행</span>
+          </div>
+        </a>
+        <a href="" class="project" target="_blank">
+          <img src="imgs/projects/validation project.png" alt="validation" class="project__img">
+          <div class="project__description">
+            <h3>Validation Project</h3>
+            <span>JavaScript로 DOM 조작을 통해 유효성 검사를 진행</span>
+          </div>
+        </a>
+        <a href="" class="project" target="_blank">
+          <img src="imgs/projects/validation project.png" alt="validation" class="project__img">
+          <div class="project__description">
+            <h3>Validation Project</h3>
+            <span>JavaScript로 DOM 조작을 통해 유효성 검사를 진행</span>
+          </div>
+        </a>
+        <a href="" class="project" target="_blank">
+          <img src="imgs/projects/validation project.png" alt="validation" class="project__img">
+          <div class="project__description">
+            <h3>Validation Project</h3>
+            <span>JavaScript로 DOM 조작을 통해 유효성 검사를 진행</span>
+          </div>
+        </a>
+        <a href="" class="project" target="_blank">
+          <img src="imgs/projects/validation project.png" alt="validation" class="project__img">
+          <div class="project__description">
+            <h3>Validation Project</h3>
+            <span>JavaScript로 DOM 조작을 통해 유효성 검사를 진행</span>
+          </div>
+        </a>
+        <a href="" class="project" target="_blank">
+          <img src="imgs/projects/validation project.png" alt="validation" class="project__img">
+          <div class="project__description">
+            <h3>Validation Project</h3>
+            <span>JavaScript로 DOM 조작을 통해 유효성 검사를 진행</span>
+          </div>
+        </a>
+        <a href="" class="project" target="_blank">
+          <img src="imgs/projects/validation project.png" alt="validation" class="project__img">
+          <div class="project__description">
+            <h3>Validation Project</h3>
+            <span>JavaScript로 DOM 조작을 통해 유효성 검사를 진행</span>
+          </div>
+        </a>
+      </div>
     </div>
   </section>
 
   <!-- Testimonials -->
   <section id="testimonials" class="section">
-    <h1>Testimonials</h1>
-    <h3>See what they say about me</h3>
-    <div class="testimonials">
-      <div class="testimonial">
-        <img src="imgs/testimonial/people1.jpg" alt="" class="testimonial__avatar">
-        <div class="testimonial__speech-bubble">
-          <p>
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Maxime iste eius quasi harum.
-            Voluptatum quas ea unde suscipit ratione doloremque aliquam voluptates culpa enim nobis?
-            Assumenda necessitatibus impedit animi itaque!
-          </p>
-          <p class="name"><a href="">Jiye</a>/ company name</p>
+    <div class="section__container">
+      <h1>Testimonials</h1>
+      <h3>See what they say about me</h3>
+      <div class="testimonials">
+        <div class="testimonial">
+          <img src="imgs/testimonial/people1.jpg" alt="" class="testimonial__avatar">
+          <div class="testimonial__speech-bubble">
+            <p>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Maxime iste eius quasi harum.
+              Voluptatum quas ea unde suscipit ratione doloremque aliquam voluptates culpa enim nobis?
+              Assumenda necessitatibus impedit animi itaque!
+            </p>
+            <p class="name"><a href="">Jiye</a>/ company name</p>
+          </div>
+        </div>
+        <div class="testimonial">
+          <div class="testimonial__speech-bubble">
+            <p>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Maxime iste eius quasi harum.
+              Voluptatum quas ea unde suscipit ratione doloremque aliquam voluptates culpa enim nobis?
+              Assumenda necessitatibus impedit animi itaque!
+            </p>
+            <p class="name"><a href="">Jiye</a>/ company name</p>
+          </div>
+          <img src="imgs/testimonial/people1.jpg" alt="" class="testimonial__avatar">
         </div>
       </div>
-      <div class="testimonial">
-        <div class="testimonial__speech-bubble">
-          <p>
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Maxime iste eius quasi harum.
-            Voluptatum quas ea unde suscipit ratione doloremque aliquam voluptates culpa enim nobis?
-            Assumenda necessitatibus impedit animi itaque!
-          </p>
-          <p class="name"><a href="">Jiye</a>/ company name</p>
-        </div>
-        <img src="imgs/testimonial/people1.jpg" alt="" class="testimonial__avatar">
-      </div>
-    </div>
   </section>
 
   <!-- Contact -->
@@ -302,6 +305,8 @@
       </a>
     </div>
     <p class="contact__rights">2021 JY - All rights reserved</p>
+    </div>
+
   </section>
 </body>
 
