--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
     </div>
     <div class="navbar__menu">
       <ul class="navbar__menu">
-        <li class="navbar__menu__item">Home</li>
-        <li class="navbar__menu__item">About</li>
+        <li class="navbar__menu__item menu__home active">Home</li>
+        <li class="navbar__menu__item menu__about">About</li>
         <li class="navbar__menu__item">Skills</li>
         <li class="navbar__menu__item">My work</li>
         <li class="navbar__menu__item">Testimonial</li>
