JS: Home contact button

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       I'm frontend developer :)
     </h1>
     <h2 class="home__descrition">I am a web frontend developer using JavaScript as the main language.</h2>
-    <button class="home__contact">Contack Me</button>
+    <button class="home__contact" data-link="#contact">Contack Me</button>
   </section>
 
   <!-- About -->
