--- a/index.html
+++ b/index.html
@@ -40,13 +40,15 @@
 
   <!-- Home -->
   <section id="home">
-    <img src="imgs/me.png" alt="Jiye's profile photo" class="home__avatar">
-    <h1 class="home__title">
-      Hello, <br>
-      I'm frontend developer :)
-    </h1>
-    <h2 class="home__descrition">I am a web frontend developer using JavaScript as the main language.</h2>
-    <button class="home__contact" data-link="#contact">Contack Me</button>
+    <div class="home__container">
+      <img src="imgs/me.png" alt="Jiye's profile photo" class="home__avatar">
+      <h1 class="home__title">
+        Hello, <br>
+        I'm frontend developer :)
+      </h1>
+      <h2 class="home__descrition">I am a web frontend developer using JavaScript as the main language.</h2>
+      <button class="home__contact" data-link="#contact">Contack Me</button>
+    </div>
   </section>
 
   <!-- About -->
