--- a/index.html
+++ b/index.html
@@ -318,6 +318,11 @@
 
   </section>
 
+  <!-- Arrow up -->
+  <button class="arrow-up">
+    <i class="fas fa-arrow-up"></i>
+  </button>
+
 </body>
 
 </html>
