--- a/index.html
+++ b/index.html
@@ -205,67 +205,76 @@
       <h1>My work</h1>
       <h3>projects</h3>
       <div class="work__categories">
-        <button class="categories__btn active">All<span class="category__count">5</span></button>
-        <button class="categories__btn">Front-end<span class="category__count">3</span></button>
-        <button class="categories__btn">Back-end<span class="category__count">2</span></button>
+        <button class="categories__btn active" data-filter="*">
+          All
+          <span class="category__count">
+            7
+          </span>
+        </button>
+        <button class="categories__btn" data-filter="front-end">
+          Front-end
+          <span class="category__count">
+            4
+          </span>
+        </button>
+        <button class="categories__btn" data-filter="back-end">
+          Back-end
+          <span class="category__count">
+            3
+          </span>
+        </button>
       </div>
       <div class="work__projects">
-        <a href="" class="project" target="_blank">
+        <a href="" class="project" target="_blank" data-type="front-end">
           <img src="imgs/projects/validation project.png" alt="validation" class="project__img">
           <div class="project__description">
             <h3>Validation Project</h3>
             <span>JavaScript로 DOM 조작을 통해 유효성 검사를 진행</span>
           </div>
         </a>
-        <a href="" class="project" target="_blank">
+        <a href="" class="project" target="_blank" data-type="front-end">
           <img src="imgs/projects/validation project.png" alt="validation" class="project__img">
           <div class="project__description">
             <h3>Validation Project</h3>
             <span>JavaScript로 DOM 조작을 통해 유효성 검사를 진행</span>
           </div>
         </a>
-        <a href="" class="project" target="_blank">
+        <a href="" class="project" target="_blank" data-type="front-end">
           <img src="imgs/projects/validation project.png" alt="validation" class="project__img">
           <div class="project__description">
             <h3>Validation Project</h3>
             <span>JavaScript로 DOM 조작을 통해 유효성 검사를 진행</span>
           </div>
         </a>
-        <a href="" class="project" target="_blank">
+        <a href="" class="project" target="_blank" data-type="front-end">
           <img src="imgs/projects/validation project.png" alt="validation" class="project__img">
           <div class="project__description">
             <h3>Validation Project</h3>
             <span>JavaScript로 DOM 조작을 통해 유효성 검사를 진행</span>
           </div>
         </a>
-        <a href="" class="project" target="_blank">
+        <a href="" class="project" target="_blank" data-type="back-end">
           <img src="imgs/projects/validation project.png" alt="validation" class="project__img">
           <div class="project__description">
             <h3>Validation Project</h3>
             <span>JavaScript로 DOM 조작을 통해 유효성 검사를 진행</span>
           </div>
         </a>
-        <a href="" class="project" target="_blank">
+        <a href="" class="project" target="_blank" data-type="back-end">
           <img src="imgs/projects/validation project.png" alt="validation" class="project__img">
           <div class="project__description">
             <h3>Validation Project</h3>
             <span>JavaScript로 DOM 조작을 통해 유효성 검사를 진행</span>
           </div>
         </a>
-        <a href="" class="project" target="_blank">
+        <a href="" class="project" target="_blank" data-type="back-end">
           <img src="imgs/projects/validation project.png" alt="validation" class="project__img">
           <div class="project__description">
             <h3>Validation Project</h3>
             <span>JavaScript로 DOM 조작을 통해 유효성 검사를 진행</span>
           </div>
         </a>
-        <a href="" class="project" target="_blank">
-          <img src="imgs/projects/validation project.png" alt="validation" class="project__img">
-          <div class="project__description">
-            <h3>Validation Project</h3>
-            <span>JavaScript로 DOM 조작을 통해 유효성 검사를 진행</span>
-          </div>
-        </a>
+
       </div>
     </div>
   </section>
