JS: Remove active form nav

--- a/index.html
+++ b/index.html
@@ -205,19 +205,19 @@
       <h1>My work</h1>
       <h3>projects</h3>
       <div class="work__categories">
-        <button class="categories__btn active" data-filter="*">
+        <button class="category__btn selected" data-filter="*">
           All
           <span class="category__count">
             7
           </span>
         </button>
-        <button class="categories__btn" data-filter="front-end">
+        <button class="category__btn" data-filter="front-end">
           Front-end
           <span class="category__count">
             4
           </span>
         </button>
-        <button class="categories__btn" data-filter="back-end">
+        <button class="category__btn" data-filter="back-end">
           Back-end
           <span class="category__count">
             3
